# rules_oci

./: .bazelignore  .bazelrc  .bazelversion  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  CONTRIBUTING.md  FAQ.md  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  cred_helper.py  external  fetch.bzl  internal_deps.bzl  maven_install.json  test.bzl  test.sh
container/: BUILD.bazel  container.bzl  defs.bzl  image.bzl  pull.bzl  repositories.bzl  runfiles.bzl  toolchain.bzl
container/private/: BUILD.bazel  container.bzl  image.bzl  layer.bzl  pull.bzl  toolchains_repo.bzl  versions.bzl
container/tests/: BUILD.bazel  versions_test.bzl
cosign/: BUILD.bazel  defs.bzl  repositories.bzl  toolchain.bzl
cosign/private/: BUILD.bazel  attach.bzl  attach.sh.tpl  attest.bzl  attest.sh.tpl  sign.bzl  sign.sh.tpl  versions.bzl
docs/: BUILD.bazel  compare_dockerfile.md  container.md  cosign_attach.md  cosign_attest.md  cosign_sign.md  cpp.md  design.md  go.md  groovy.md  image.md  image_index.md  index.md  java.md  javascript.md  load.md  migrate_from_rules_docker.md  pull.md  push.md  python.md  release.md  rules.md  rust.md  scala.md  static_content.md  structure_test.md  tarball.md
e2e/assertion/: .bazelignore  BUILD.bazel  MODULE.bazel  oci_load_tests.bats  oci_pull_auth_tests.bats  oci_pull_tests.bats
e2e/assertion/ca/: cacerts  cert.pem  (+3 more)
e2e/auth/: .bazelignore  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  deps.bzl  go.mod  go.sum  main.go  test.bats  test.sh
e2e/convert_docker_tarball/: BUILD.bazel  Dockerfile  README.md  WORKSPACE  convert.bash  create_base_image.bash  test.yaml
e2e/crane_as_registry/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  WORKSPACE.bzlmod
e2e/custom_registry/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  deps.bzl  go.sum
e2e/pull/: BUILD.bazel  MODULE.bazel  test.bats
e2e/smoke/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  expected_created.txt  workspace_status.sh
e2e/wasm/: BUILD.bazel  MODULE.bazel  WORKSPACE  main.rs
example/: BUILD.bazel  main.js
example/attach/: BUILD.bazel  test.bash
example/empty_base/: BUILD.bazel
example/env_inheritance/: BUILD.bazel  test.yaml
example/go/: BUILD.bazel  server.go  test.yaml
example/js/: BUILD.bazel  js_image_layer.bzl  main.js  test.yaml
example/multi_arch/: BUILD.bazel  test.bash  test.yaml
example/pull/: BUILD.bazel  pull.bzl  test.yaml
example/push/: BUILD.bazel  test.bash
example/py/: BUILD.bazel  main.py
example/sign/: BUILD.bazel  test.bash
examples/: BUILD.bazel  assert.bzl  assertion_tools.lock.json  jd_test.bash  setup_assertion_repos.bzl
examples/apko/: BUILD.bazel  wolfi-base.yaml
examples/assertion/: BUILD.bazel  README.md  assert.bzl  assert_push_transitive_deps.sh  case12.sh
examples/attach/: BUILD.bazel
examples/attach_external/: BUILD.bazel  BUILD.template  test.bash
examples/attest/: BUILD.bazel  sbom.spdx.json  test.bash  test_attest_no_repo_fails.bash  test_attest_no_repo_passes.bash
examples/attest_external/: BUILD.bazel  test.bash
examples/big_image/: BUILD.bazel
examples/bundle/: BUILD.bazel
examples/cmd_location_expansion/: BUILD.bazel  app.bash
examples/convert_docker_tarball/: .gitignore  BUILD.bazel  README.md  WORKSPACE  convert.bash  test.yaml
examples/created_timestamp/: BUILD
examples/credential_helper/: auth.sh
examples/deb/: BUILD.bazel  README.md
examples/dockerfile/: BUILD.bazel  Dockerfile  MODULE.bazel  README.md  buildx.bzl  buildx.lock.json  context.Dockerfile  requirements.txt  test.yaml
examples/dockerfile_tar_context/: BUILD.bazel  Dockerfile  README.md  buildx.bzl  buildx_wrapper.sh
examples/empty_base/: BUILD.bazel
examples/env/: BUILD.bazel  test.bash  test.yaml
examples/env_inheritance/: BUILD.bazel  test.yaml
examples/go/: BUILD.bazel  go.mod  main.go  measure-bazel-target  test.yaml
examples/history/: BUILD.bazel
examples/image_index/: BUILD.bazel  say_hello_amd64.sh  say_hello_arm64.sh
examples/incremental_load/: BUILD.bazel  README.md  loader.sh
examples/java/: BUILD.bazel  README.md  measure-bazel-target  test.yaml
examples/js/: BUILD.bazel  README.md  js_image_layer.bzl  test.yaml
examples/just_tar/: BUILD.bazel
examples/labels/: BUILD.bazel  test.yaml
examples/location_expansion/: BUILD.bazel  test.bash  test.yaml
examples/multi_arch/: BUILD.bazel
examples/multi_arch_go/: BUILD  main.go
examples/multi_architecture_image/: BUILD.bazel  README.md
examples/push/: BUILD.bazel  repository.txt  stamp_tags.bzl  test.bash  test_push_image_wo_repository_fails.bash
examples/repo_tags/: BUILD.bazel  tags_file.txt
examples/run_commands/: BUILD  README.md
examples/sign/: BUILD.bazel  test.bash  test_sign_no_repo_fails.bash  test_sign_no_repo_passes.bash
examples/sign_external/: BUILD.bazel  BUILD.template  test.bash
examples/simple/: BUILD.bazel  test.yaml
examples/tarball_as_base/: BUILD.bazel
examples/tarball_incremental_loader/: BUILD.bazel  README.md
examples/test1/: BUILD
examples/test2/: BUILD
examples/various/: BUILD.bazel
mylang/: BUILD.bazel  repositories.bzl
mylang/private/: BUILD.bazel
mylang/tests/: versions_test.bzl
oci/: BUILD.bazel  container.bzl  defs.bzl  dependencies.bzl  extensions.bzl  pull.bzl  repositories.bzl  toolchain.bzl
oci/private/: BUILD.bazel  auth_config_locator.bzl  authn.bzl  bundle.bzl  bundle.sh.tpl  config.bzl  container.bzl  container.sh.tpl  container_run_and_save.bzl  container_run_and_save.sh.tpl  deps_aspect.bzl  descriptor.bat  descriptor.sh  descriptor.sh.tpl  download.bzl  image.bzl  image.sh  image.sh.tpl  image_id.sh.tpl  image_index.bzl  image_index.sh.tpl  image_layer_compute.sh  index.bzl  load.bat.tpl  load.bzl  load.sh.tpl  pull.bzl  push.bzl  push.sh.tpl  resource_sets.bzl  structure_test.bzl  tarball.bzl  tarball.sh.tpl  tarball_run.sh.tpl  toolchains_repo.bzl  util.bzl  versions.bzl  windows_utils.bzl  zot_launcher.sh.tpl
oci/tests/: BUILD.bazel  cst_exclusive.patch  pull_tests.bzl  versions_test.bzl
(+108 files in other folders)
