# This load statement must be in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "container",
    bzl_library_target = "//oci:container",
)

stardoc_with_diff_test(
    name = "tarball",
    bzl_library_target = "//oci/private:tarball",
)

update_docs(name = "update")
