# This load statement must be in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "image",
    bzl_library_target = "//oci/private:image",
)

stardoc_with_diff_test(
    name = "tarball",
    bzl_library_target = "//oci/private:tarball",
)

stardoc_with_diff_test(
    name = "image_index",
    bzl_library_target = "//oci/private:image_index",
)

stardoc_with_diff_test(
    name = "cosign_sign",
    bzl_library_target = "//cosign/private:sign",
)

update_docs(name = "update")
