load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

exports_files([
    "sign.sh.tpl",
    "attach.sh.tpl",
])

bzl_library(
    name = "sign",
    srcs = ["sign.bzl"],
    visibility = [
        "//cosign:__subpackages__",
        "//docs:__pkg__",
    ],
)

bzl_library(
    name = "attach",
    srcs = ["attach.bzl"],
    visibility = [
        "//cosign:__subpackages__",
        "//docs:__pkg__",
    ],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//cosign:__subpackages__"],
)
