load("@bazel_lib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

exports_files([
    "sign.sh.tpl",
    "attest.sh.tpl",
])

bzl_library(
    name = "attest",
    srcs = ["attest.bzl"],
    visibility = ["//cosign:__subpackages__"],
)

bzl_library(
    name = "sign",
    srcs = ["sign.bzl"],
    visibility = ["//cosign:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//cosign:__subpackages__"],
)
