"Bazel dependencies"

bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.2")
bazel_dep(name = "rules_oci", version = "0.0.0")
bazel_dep(name = "external_wksp", version = "1.0")
bazel_dep(name = "rules_jvm_external", version = "5.3")

local_path_override(
    module_name = "rules_oci",
    path = "../..",
)

local_path_override(
    module_name = "external_wksp",
    path = "./wksp/external_wksp",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.toolchains(name = "ocix")
use_repo(oci, "ocix_crane_toolchains")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//registry:go.mod")
use_repo(
    go_deps,
    "com_github_google_go_containerregistry",
    "com_github_r3labs_diff_v3",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_1_23",
    version = "1.23.6",
)
use_repo(
    go_sdk,
    "go_host_compatible_sdk_label",
    "go_toolchains",
)

register_toolchains("@go_toolchains//:all")
