load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")

# gazelle:prefix example.com/auth
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

gazelle(
    name = "gazelle",
    command = "fix",
)

go_library(
    name = "auth_lib",
    srcs = ["main.go"],
    importpath = "example.com/auth",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_google_go_containerregistry//pkg/registry",
        "@com_github_r3labs_diff_v3//:diff",
    ],
)

go_binary(
    name = "auth",
    embed = [":auth_lib"],
    visibility = ["//visibility:public"],
)

oci_image(
    name = "empty",
    architecture = "arm64",
    os = "linux",
)

oci_push(
    name = "push",
    default_tags = ["latest"],
    image = ":empty",
    repository = "localhost/empty_image",
)
