load("@aspect_bazel_lib//lib:run_binary.bzl", "run_binary")
load("@container_structure_test//:defs.bzl", "container_structure_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")

sh_binary(
    name = "convert",
    srcs = ["convert.bash"],
    data = [
        "@oci_crane_toolchains//:current_toolchain",
    ],
)

# Before building this example, you'll need to run ./create_base_image.bash to produce an
# image.tar file. It's large so we .gitignore it.
run_binary(
    name = "base",
    srcs = ["image.tar"],
    args = [
        "$@",
        "$(location :image.tar)",
        "$(CRANE_BIN)",
    ],
    out_dirs = ["oci"],
    tool = ":convert",
    toolchains = [
        "@oci_crane_toolchains//:current_toolchain",
    ],
)

oci_image(
    name = "image",
    base = ":base",
)

oci_tarball(
    name = "tar",
    image = ":image",
    repo_tags = [],
)

container_structure_test(
    name = "test",
    configs = ["test.yaml"],
    image = ":image",
)
