load("@container_structure_test//:defs.bzl", "container_structure_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")

oci_image(
    name = "image",
    architecture = select({
        "@platforms//cpu:arm64": "arm64",
        "@platforms//cpu:x86_64": "amd64",
    }),
    cmd = [
        "--arg1",
        "--arg2",
    ],
    entrypoint = ["/custom_bin"],
    workdir = "/custom_dir",
    env = {
        "ENV": "/test",
    },
    os = "linux",
)

oci_tarball(
    name = "tar",
    image = ":image",
    repo_tags = [],
)

container_structure_test(
    name = "test",
    configs = ["test.yaml"],
    driver = "tar",
    image = ":tar",
)
