load("@container_structure_test//:defs.bzl", "container_structure_test")
load("@rules_oci//oci:defs.bzl", "oci_image")

oci_image(
    name = "image",
    architecture = select({
        "@platforms//cpu:arm64": "arm64",
        "@platforms//cpu:x86_64": "amd64",
    }),
    cmd = [
        "--arg1",
        "--arg2",
    ],
    entrypoint = ["/custom_bin"],
    env = {
        "ENV": "/test",
    },
    exposed_ports = [
        "1234/tcp",
        "5678/udp",
        "5000",
    ],
    os = "linux",
)

container_structure_test(
    name = "test",
    configs = ["test.yaml"],
    image = ":image",
)
