"Bazel dependencies"

bazel_dep(name = "container_structure_test", version = "1.15.0", dev_dependency = True)
bazel_dep(name = "rules_oci", version = "0.0.0", dev_dependency = True)

bazel_dep(name = "platforms", version = "0.0.5")

local_path_override(
    module_name = "rules_oci",
    path = "../..",
)
