"Bazel dependencies"

bazel_dep(name = "container_structure_test", version = "1.15.0", dev_dependency = True)
bazel_dep(name = "rules_oci", version = "0.0.0", dev_dependency = True)

bazel_dep(name = "platforms", version = "0.0.5")

local_path_override(
    module_name = "rules_oci",
    path = "../..",
)

# Bump crane to v0.15.2 for exposed_ports.
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.toolchains(crane_version = "v0.15.2")
