load("@rules_oci//oci:defs.bzl", "oci_image", "structure_test")

oci_image(
    name = "image",
    base = "@debian",
    cmd = [
        "--arg1",
        "--arg2",
    ],
    entrypoint = ["/custom_bin"],
    env = {
        "ENV": "/test",
    },
)

structure_test(
    name = "test",
    configs = ["test.yaml"],
    image = ":image",
)
