load("@rules_oci//oci:defs.bzl", "oci_image")
load("@container_structure_test//:defs.bzl", "container_structure_test")

oci_image(
    name = "image",
    base = "@debian",
    cmd = [
        "--arg1",
        "--arg2",
    ],
    entrypoint = ["/custom_bin"],
    env = {
        "ENV": "/test",
    },
)

container_structure_test(
    name = "test",
    configs = ["test.yaml"],
    image = ":image",
)
